# auto-mcp

./: PROJECT.md  README.md  program.md  pyproject.toml  results.tsv
auto_mcp/: __init__.py  cli.py
auto_mcp/core/: __init__.py  generator.py  parser.py  types.py  validator.py
auto_mcp/templates/: __init__.py  python_server.py.j2  typescript_server.ts.j2
examples/: generate_weather_mcp.py
examples/weather_mcp_output/: README.md  pyproject.toml
examples/weather_mcp_output/weather_mcp/: __init__.py  server.py
tests/: __init__.py  test_advanced.py  test_cli.py  test_comprehensive.py  test_generator.py  test_parser.py  test_security.py  test_types.py  test_validator.py
