[tool.poetry]
name = "auto-mcp"
version = "0.1.0"
description = "Automatic MCP Server generator from API documentation"
authors = ["AutoMCP Team"]
readme = "README.md"
packages = [{include = "auto_mcp"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
jinja2 = "^3.1.3"
pydantic = "^2.5.0"
httpx = "^0.26.0"
pyyaml = "^6.0.1"
jsonschema = "^4.20.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"

[tool.poetry.scripts]
auto-mcp = "auto_mcp.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']
