[tool.poetry]
name = "weather-mcp"
version = "1.0.0"
description = "MCP server for Weather API"
authors = ["AutoMCP Example"]
readme = "README.md"
packages = [{include = "weather_mcp"}]

[tool.poetry.dependencies]
python = "^3.11"
fastmcp = "^0.1.0"
httpx = "^0.26.0"
pydantic = "^2.5.0"

[tool.poetry.scripts]
weather-mcp = "weather_mcp.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
